fixed spacing with bottom menu ad

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -344,8 +344,7 @@ a:hover{
 #bottomAd{
     width: 100%;
     height: 10px;
-
-    background-color: red;
+    margin-top: 3vh;
 }
 
 #redditLink{
